Fix wide archive layout to respect sidebar spacing

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -34,10 +34,10 @@
   }
 }
 
-/* Wide layout modifier */
+/* Wide layout modifier for archive pages */
 .archive.wide {
   @include breakpoint($large) {
-    @include span(12 of 12);
+    @include span(10 of 12 last);
   }
 }
 
